# tauri-plugin-serialplugin

./: .editorconfig  .gitignore  .jestignore  .versionrc.json  CHANGELOG.md  Cargo.toml  README.md  build.rs  debag.md  debug.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.json
crates/android-usb-serial/: CHANGELOG.md  Cargo.toml  NOTICE  README.md
crates/android-usb-serial/src/: config.rs  device.rs  error.rs  fake.rs  lib.rs  nusb_transport.rs  port.rs  probe.rs  reader.rs  rx_filter.rs  serialport_compat.rs  transport.rs  xonxoff.rs
crates/android-usb-serial/src/drivers/: cdc_acm.rs  ch34x.rs  chrome_ccd.rs  cp21xx.rs  ftdi.rs  gsm_modem.rs  mod.rs  prolific.rs
crates/android-usb-serial/tests/: cdc_acm_test.rs  ch34x_test.rs  cp21xx_test.rs  ftdi_rx_filter_test.rs  ftdi_test.rs  golden_parity.rs  gsm_ccd_test.rs  nusb_transport_test.rs  probe_table_test.rs  probe_test.rs  prolific_test.rs  reader_test.rs  spike_fd.rs  stall_recovery_test.rs
crates/android-usb-serial/tests/fixtures/cdc_acm/: cdc_iad_break_off.json  cdc_iad_break_on.json  cdc_iad_close.json  cdc_iad_dtr_off.json  cdc_iad_dtr_on.json  cdc_iad_flow_DtrDsr.json  cdc_iad_flow_None.json  cdc_iad_flow_RtsCts.json  cdc_iad_open_default.json  cdc_iad_open_line_config.json  cdc_iad_rts_off.json  cdc_iad_rts_on.json  cdc_iad_set_baud_1000000.json  cdc_iad_set_baud_115200.json  cdc_iad_set_baud_1200.json  cdc_iad_set_baud_1500000.json  cdc_iad_set_baud_19200.json  cdc_iad_set_baud_2000000.json  cdc_iad_set_baud_230400.json  cdc_iad_set_baud_250000.json  cdc_iad_set_baud_300.json  cdc_iad_set_baud_3000000.json  cdc_iad_set_baud_38400.json  cdc_iad_set_baud_460800.json  cdc_iad_set_baud_57600.json  cdc_iad_set_baud_921600.json  cdc_iad_set_baud_9600.json  cdc_iad_set_line_7E1.json  cdc_iad_set_line_7M1.json  cdc_iad_set_line_7O1.json  cdc_iad_set_line_7S1.json  cdc_iad_set_line_8N1.json  cdc_iad_set_line_8N1_5.json  cdc_iad_set_line_8N2.json  cdc_multi_close.json  cdc_multi_port0_break_off.json  cdc_multi_port0_break_on.json  cdc_multi_port0_dtr_off.json  cdc_multi_port0_dtr_on.json  cdc_multi_port0_flow_DtrDsr.json  (+94 more)
crates/android-usb-serial/tests/fixtures/ch34x/: break_off.json  break_on.json  close.json  dtr_off.json  dtr_on.json  flow_DtrDsr.json  flow_None.json  flow_RtsCts.json  modem_status.json  open_default.json  rts_off.json  rts_on.json  set_baud_1000000.json  set_baud_115200.json  set_baud_1200.json  set_baud_1500000.json  set_baud_19200.json  set_baud_2000000.json  set_baud_230400.json  set_baud_250000.json  set_baud_300.json  set_baud_3000000.json  set_baud_38400.json  set_baud_460800.json  set_baud_57600.json  set_baud_921600.json  set_baud_9600.json  set_line_7E1.json  set_line_7M1.json  set_line_7O1.json  set_line_7S1.json  set_line_8N1.json  set_line_8N1_5.json  set_line_8N2.json
crates/android-usb-serial/tests/fixtures/chrome_ccd/: chrome_ccd_close.json  chrome_ccd_port0_open_default.json  chrome_ccd_port1_open_default.json  chrome_ccd_port2_open_default.json  cr50_close.json  cr50_port0_open_default.json  cr50_port1_open_default.json  cr50_port2_open_default.json
crates/android-usb-serial/tests/fixtures/cp21xx/: cp2102_break_off.json  cp2102_break_on.json  cp2102_close.json  cp2102_dtr_off.json  cp2102_dtr_on.json  cp2102_flow_DtrDsr.json  cp2102_flow_None.json  cp2102_flow_RtsCts.json  cp2102_flow_XonXoff.json  cp2102_modem_status.json  cp2102_open_default.json  cp2102_purge_both.json  cp2102_purge_rx.json  cp2102_purge_tx.json  cp2102_rts_off.json  cp2102_rts_on.json  cp2102_set_baud_1000000.json  cp2102_set_baud_115200.json  cp2102_set_baud_1200.json  cp2102_set_baud_1500000.json  cp2102_set_baud_19200.json  cp2102_set_baud_2000000.json  cp2102_set_baud_230400.json  cp2102_set_baud_250000.json  cp2102_set_baud_300.json  cp2102_set_baud_3000000.json  cp2102_set_baud_38400.json  cp2102_set_baud_460800.json  cp2102_set_baud_57600.json  cp2102_set_baud_921600.json  cp2102_set_baud_9600.json  cp2102_set_line_7E1.json  cp2102_set_line_7M1.json  cp2102_set_line_7O1.json  cp2102_set_line_7S1.json  cp2102_set_line_8N1.json  cp2102_set_line_8N1_5.json  cp2102_set_line_8N2.json  cp2105_close.json  cp2105_port0_break_off.json  (+74 more)
crates/android-usb-serial/tests/fixtures/ftdi/: ftdi_ft2232h_close.json  ftdi_ft2232h_port0_break_off.json  ftdi_ft2232h_port0_break_on.json  ftdi_ft2232h_port0_dtr_off.json  ftdi_ft2232h_port0_dtr_on.json  ftdi_ft2232h_port0_flow_DtrDsr.json  ftdi_ft2232h_port0_flow_None.json  ftdi_ft2232h_port0_flow_RtsCts.json  ftdi_ft2232h_port0_flow_XonXoffInline.json  ftdi_ft2232h_port0_modem_status.json  ftdi_ft2232h_port0_open_default.json  ftdi_ft2232h_port0_purge_both.json  ftdi_ft2232h_port0_purge_rx.json  ftdi_ft2232h_port0_purge_tx.json  ftdi_ft2232h_port0_rts_off.json  ftdi_ft2232h_port0_rts_on.json  ftdi_ft2232h_port0_set_baud_1000000.json  ftdi_ft2232h_port0_set_baud_115200.json  ftdi_ft2232h_port0_set_baud_1200.json  ftdi_ft2232h_port0_set_baud_1500000.json  ftdi_ft2232h_port0_set_baud_19200.json  ftdi_ft2232h_port0_set_baud_2000000.json  ftdi_ft2232h_port0_set_baud_230400.json  ftdi_ft2232h_port0_set_baud_250000.json  ftdi_ft2232h_port0_set_baud_300.json  ftdi_ft2232h_port0_set_baud_3000000.json  ftdi_ft2232h_port0_set_baud_38400.json  ftdi_ft2232h_port0_set_baud_460800.json  ftdi_ft2232h_port0_set_baud_57600.json  ftdi_ft2232h_port0_set_baud_921600.json  ftdi_ft2232h_port0_set_baud_9600.json  ftdi_ft2232h_port0_set_baud_error_4000000.json  ftdi_ft2232h_port0_set_line_7E1.json  ftdi_ft2232h_port0_set_line_7M1.json  ftdi_ft2232h_port0_set_line_7O1.json  ftdi_ft2232h_port0_set_line_7S1.json  ftdi_ft2232h_port0_set_line_8N1.json  ftdi_ft2232h_port0_set_line_8N1_5.json  ftdi_ft2232h_port0_set_line_8N2.json  ftdi_ft2232h_port1_break_off.json  (+76 more)
examples/serialport-test/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
examples/serialport-test/src-tauri/capabilities/: default.json
examples/serialport-test/src-tauri/src/: lib.rs
examples/usb-driver-tester/rust/: Cargo.toml
examples/usb-driver-tester/rust/src/: lib.rs
(+395 files in other folders)
