[package]
name = "tauri-plugin-serialplugin"
version = "2.20.0"
description = "Access the current process of your Tauri application."
edition = "2021"
authors = ["Tauri Programme within The Commons Conservancy"]
license = "Apache-2.0 OR MIT"
rust-version = "1.70"
links = "tauri-plugin-serialplugin"
repository = "https://github.com/s00d/tauri-plugin-serialplugin"

[package.metadata.docs.rs]
rustc-args = [ "--cfg", "docsrs" ]
rustdoc-args = [ "--cfg", "docsrs" ]
targets = ["x86_64-linux-android"]

[package.metadata.platforms.support]
windows = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
android = { level = "full", notes = "" }

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = [ "build" ] }

[dependencies]
serialport = "4.7.2"
tauri = { version = "2.6.2", features = ["test"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
serde_json = "1.0.140"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"