[package]
name = "tauri-plugin-serialplugin"
version = "3.0.0"
description = "Tauri plugin for serial port access (desktop and Android)."
edition = "2021"
authors = ["Tauri Programme within The Commons Conservancy"]
license = "Apache-2.0 OR MIT"
rust-version = "1.70"
links = "tauri-plugin-serialplugin"
repository = "https://github.com/s00d/tauri-plugin-serialplugin"

[package.metadata.docs.rs]
rustc-args = [ "--cfg", "docsrs" ]
rustdoc-args = [ "--cfg", "docsrs" ]
targets = ["x86_64-linux-android"]

[package.metadata.platforms.support]
windows = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
android = { level = "full", notes = "" }

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = [ "build" ] }

[dependencies]
tauri = { version = "2.6.2", features = ["test"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
serialport = "4.9.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
