[package]
name = "android-usb-serial"
version = "0.1.0"
description = "Pure Rust USB serial drivers for Android (and Linux), built on nusb"
edition = "2021"
rust-version = "1.79"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/s00d/tauri-plugin-serialplugin"
homepage = "https://github.com/s00d/tauri-plugin-serialplugin/tree/master/crates/android-usb-serial"
documentation = "https://docs.rs/android-usb-serial"
authors = ["s00d"]
keywords = ["usb", "serial", "android", "nusb", "serialport"]
categories = ["hardware-support", "os::android-apis", "embedded"]
# Library package; lockfile not required for consumers. Golden fixtures stay in crate.
exclude = [
    "/target/",
    "Cargo.lock",
]

[package.metadata.docs.rs]
all-features = false
features = ["serialport-compat"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-linux-android"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["serialport-compat"]
# In-memory FakeTransport + golden_record binary (tests / harnesses).
fake-transport = ["dep:serde", "dep:serde_json", "dep:base64"]
# serialport::SerialPort adapter for drop-in desktop/mobile facades.
serialport-compat = ["dep:serialport"]

[dependencies]
log = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.base64]
version = "0.22"
optional = true

[dependencies.serialport]
version = "4.9"
optional = true

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
nusb = "0.2"
libc = "0.2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[[bin]]
name = "golden_record"
path = "src/bin/golden_record.rs"
required-features = ["fake-transport"]
