[package]
name = "serialport-test"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = [] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "^1.0.135"
serialport = "4.7.0"
tauri-plugin-serialplugin = { path = "../../../" }
tauri-plugin-devtools = "2.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
